# rag-ci-cd

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  test_comprehensive.py
.github/workflows/: ci-cd.yml
ci_logs/: 1_Integration Tests.txt  2_Unit Tests.txt  3_Lint.txt
ci_logs/Integration Tests/: 1_Set up job.txt  20_Post Checkout repository.txt  21_Complete job.txt  2_Checkout repository.txt  3_Install uv.txt  4_Set up Python 3.12.txt  5_Cache HuggingFace models.txt  6_Install dependencies.txt  7_Install Ollama.txt  8_Pull Ollama models.txt  system.txt
ci_logs/Lint/: 13_Post Install uv.txt  14_Post Checkout repository.txt  15_Complete job.txt  1_Set up job.txt  2_Checkout repository.txt  3_Install uv.txt  4_Set up Python 3.12.txt  5_Install dependencies.txt  (+3 more)
ci_logs2/: 1_Integration Tests.txt  2_Unit Tests.txt  3_Lint.txt
docs/: DOC-10_MARS_2024_010.txt  DOC-11_STUDENTS_2024_011.csv  DOC-12_FRUITS_2024_012.csv  DOC-13_CITIES_2024_013.csv  DOC-14_ANIMALS_2024_014.csv  DOC-15_COUNTRIES_2024_015.csv  DOC-16_SPORTS_2024_016.csv  DOC-17_PLANETS_2024_017.csv  DOC-18_SCHOOLS_2024_018.csv  DOC-19_EMPLOYEES_2024_019.csv  DOC-1_ALBERT_2024_001.txt  DOC-20_WEATHER_2024_020.csv  DOC-2_INDIA_2024_002.txt  DOC-3_BLUEWHALE_2024_003.txt  DOC-4_MANGO_2024_004.txt  DOC-5_HARVARD_2024_005.txt  DOC-6_TOKYO_2024_006.txt  DOC-7_ELEPHANT_2024_007.txt  DOC-8_APPLEFRUIT_2024_008.txt  DOC-9_NILE_2024_009.txt
eval_data/: gold_set.json
rag_ci_cd/: __main__.py  cli.py  config.py  pipeline.py
tests/: conftest.py  gold_set.json  test_chunking.py  test_evaluation.py  test_generation.py  test_ingestion.py  test_integration.py  test_models.py  test_reranking.py  test_retrieval.py  test_routing.py  test_service.py
(+70 files in other folders)
