[project]
name = "rag-ci-cd"
version = "0.1.0"
description = "Financial Document RAG System - multi-stage retrieval with grounded generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "pypdf>=6.14.2",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
rag-eval = "rag_ci_cd.cli:cmd_eval"
rag-index = "rag_ci_cd.cli:cmd_index"
rag-serve = "rag_ci_cd.cli:cmd_serve"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["rag_ci_cd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a live Ollama instance, skipped in CI",
]
